- Show decimal positions in column data when required. - Show <null> when column data is null instead of an empty string.