@@ -1,6 +1,6 @@
 package net.sourceforge.squirrel_sql.fw.datasetviewer;
 /*
- * Copyright (C) 2001 Colin Bell
+ * Copyright (C) 2001-2002 Colin Bell
  * colbell@users.sourceforge.net
  *
  * This library is free software; you can redistribute it and/or
@@ -17,19 +17,21 @@ package net.sourceforge.squirrel_sql.fw.datasetviewer;
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
+import java.math.BigDecimal;
 import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
 import java.sql.Types;
 import java.util.ArrayList;
-import java.util.Iterator;
 
 import net.sourceforge.squirrel_sql.fw.util.IMessageHandler;
 import net.sourceforge.squirrel_sql.fw.util.log.ILogger;
 import net.sourceforge.squirrel_sql.fw.util.log.LoggerController;
 
-public class ResultSetDataSet implements IDataSet {
-	private ILogger s_log = LoggerController.createLogger(ResultSetDataSet.class);
+public class ResultSetDataSet implements IDataSet
+{
+	private ILogger s_log =
+		LoggerController.createLogger(ResultSetDataSet.class);
 
 	// These 2 should be handled with an Iterator!!!
 	private int _iCurrent = -1;
@@ -40,81 +42,105 @@ public class ResultSetDataSet implements IDataSet {
 	private DataSetDefinition _dataSetDefinition;
 	private ArrayList _alData;
 
-	public ResultSetDataSet() throws DataSetException {
+	public ResultSetDataSet() throws DataSetException
+	{
 		this(null, null);
 	}
 
-	public ResultSetDataSet(ResultSet rs) throws DataSetException {
+	public ResultSetDataSet(ResultSet rs) throws DataSetException
+	{
 		this(rs, null);
 	}
 
 	public ResultSetDataSet(ResultSet rs, int[] columnIndices)
-			throws IllegalArgumentException, DataSetException {
+		throws IllegalArgumentException, DataSetException
+	{
 		super();
 		setResultSet(rs, columnIndices);
 	}
 
-	public void setResultSet(ResultSet rs) throws DataSetException {
+	public void setResultSet(ResultSet rs) throws DataSetException
+	{
 		setResultSet(rs, null);
 	}
 
-	public void setResultSet(ResultSet rs, int[] columnIndices) throws DataSetException {
-		if (columnIndices != null && columnIndices.length == 0) {
+	public void setResultSet(ResultSet rs, int[] columnIndices)
+		throws DataSetException
+	{
+		if (columnIndices != null && columnIndices.length == 0)
+		{
 			columnIndices = null;
 		}
 		_columnIndices = columnIndices;
 		_iCurrent = -1;
 		_alData = new ArrayList();
 
-		if (rs != null) {
-			try {
+		if (rs != null)
+		{
+			try
+			{
 				ResultSetMetaData md = rs.getMetaData();
-				_columnCount = columnIndices != null ? columnIndices.length : md.getColumnCount();
-				_dataSetDefinition = new DataSetDefinition(createColumnDefinitions(md, columnIndices));
-				while (rs.next()) {
+				_columnCount =
+					columnIndices != null
+						? columnIndices.length
+						: md.getColumnCount();
+				ColumnDisplayDefinition[] colDefs = createColumnDefinitions(md, columnIndices);
+				_dataSetDefinition = new DataSetDefinition(colDefs);
+				while (rs.next())
+				{
 					Object[] row = new Object[_columnCount];
-					for (int i = 0; i < _columnCount; ++i) {
+					for (int i = 0; i < _columnCount; ++i)
+					{
 						int idx = _columnIndices != null ? _columnIndices[i] : i + 1;
-						try {
-							switch (md.getColumnType(idx)) {
-								case Types.NULL:
+						try
+						{
+							switch (md.getColumnType(idx))
+							{
+								case Types.NULL :
 									row[i] = null;
 									break;
-								case Types.BIT:
+
+								case Types.BIT :
 									row[i] = rs.getObject(idx);
-									if(row[i] != null && !(row[i] instanceof Boolean))
+									if (row[i] != null
+										&& !(row[i] instanceof Boolean))
 									{
-										if(row[i] instanceof Number)
+										if (row[i] instanceof Number)
 										{
-											if(((Number)row[i]).intValue() == 0)
+											if (((Number) row[i]).intValue() == 0)
 											{
-												row[i] = new Boolean(false);
+												row[i] = Boolean.FALSE;
 											}
 											else
 											{
-												row[i] = new Boolean(true);
+												row[i] = Boolean.TRUE;
 											}
 										}
 										else
 										{
-											row[i] = new Boolean(row[i].toString());
+											row[i] = Boolean.valueOf(row[i].toString());
 										}
 									}
 									break;
-								case Types.TIME:
+
+								case Types.TIME :
 									row[i] = rs.getTime(idx);
 									break;
-								case Types.DATE:
+
+								case Types.DATE :
 									row[i] = rs.getDate(idx);
 									break;
-								case Types.TIMESTAMP:
+
+								case Types.TIMESTAMP :
 									row[i] = rs.getTimestamp(idx);
 									break;
-								case Types.BIGINT:
+
+								case Types.BIGINT :
 									row[i] = rs.getObject(idx);
-									if(row[i] != null && !(row[i] instanceof Long))
+									if (row[i] != null
+										&& !(row[i] instanceof Long))
 									{
-										if(row[i] instanceof Number)
+										if (row[i] instanceof Number)
 										{
 											row[i] = new Long(((Number)row[i]).longValue());
 										}
@@ -124,31 +150,60 @@ public class ResultSetDataSet implements IDataSet {
 										}
 									}
 									break;
+/*
+								case Types.DECIMAL :
+								case Types.DOUBLE :
+								case Types.FLOAT :
+								case Types.NUMERIC :
+								case Types.REAL :
+									row[i] = rs.getObject(idx);
+									if (row[i] != null
+										&& !(row[i] instanceof Double))
+									{
+										if (row[i] instanceof Number)
+										{
+											row[i] =
+												new Double(
+													((Number) row[i])
+														.doubleValue());
+										}
+										else
+										{
+											row[i] =
+												new Double(row[i].toString());
+										}
+									}
+									break;
+*/
 								case Types.DECIMAL:
 								case Types.DOUBLE:
 								case Types.FLOAT:
 								case Types.NUMERIC:
 								case Types.REAL:
 									row[i] = rs.getObject(idx);
-									if(row[i] != null && !(row[i] instanceof Double))
+									if (row[i] != null
+										&& !(row[i] instanceof BigDecimal))
 									{
-										if(row[i] instanceof Number)
+										if (row[i] instanceof Number)
 										{
-											row[i] = new Double(((Number)row[i]).doubleValue());
+											Number nbr = (Number)row[i];
+											row[i] = new BigDecimal(nbr.doubleValue());
 										}
 										else
 										{
-											row[i] = new Double(row[i].toString());
+											row[i] = new BigDecimal(row[i].toString());
 										}
 									}
 									break;
-								case Types.INTEGER:
-								case Types.SMALLINT:
-								case Types.TINYINT:
+
+								case Types.INTEGER :
+								case Types.SMALLINT :
+								case Types.TINYINT :
 									row[i] = rs.getObject(idx);
-									if(row[i] != null && !(row[i] instanceof Integer))
+									if (row[i] != null
+										&& !(row[i] instanceof Integer))
 									{
-										if(row[i] instanceof Number)
+										if (row[i] instanceof Number)
 										{
 											row[i] = new Integer(((Number)row[i]).intValue());
 										}
@@ -159,47 +214,55 @@ public class ResultSetDataSet implements IDataSet {
 									}
 									break;
 
-								// ?? Hard coded -. JDBC/ODBC bridge JDK1.4
-								// brings back -9 for nvarchar columns in
-								// MS SQL Server tables.
-								case Types.CHAR:
-								case Types.VARCHAR:
-								case Types.LONGVARCHAR:
-								case -9:
+									// ?? Hard coded -. JDBC/ODBC bridge JDK1.4
+									// brings back -9 for nvarchar columns in
+									// MS SQL Server tables.
+								case Types.CHAR :
+								case Types.VARCHAR :
+								case Types.LONGVARCHAR :
+								case -9 :
 									row[i] = rs.getString(idx);
 									break;
-								default:
+
+								default :
 									row[i] = "<Unknown>";
 							}
-						} catch (SQLException ex) {
+						}
+						catch (Throwable th)
+						{
 							row[i] = "<Error>";
-							s_log.error("Error reading column data", ex);
+							s_log.error("Error reading column data", th);
 						}
 
 					}
 					_alData.add(row);
 				}
-			} catch (SQLException ex) {
+			}
+			catch (SQLException ex)
+			{
 				s_log.error("Error reading ResultSet", ex);
 				throw new DataSetException(ex);
 			}
 		}
 	}
 
-	public final int getColumnCount() {
+	public final int getColumnCount()
+	{
 		return _columnCount;
 	}
 
-	public DataSetDefinition getDataSetDefinition() {
+	public DataSetDefinition getDataSetDefinition()
+	{
 		return _dataSetDefinition;
 	}
 
-	public synchronized boolean next(IMessageHandler msgHandler) throws DataSetException
+	public synchronized boolean next(IMessageHandler msgHandler)
+		throws DataSetException
 	{
 		// This should be handled with an Iterator!!!
-		if(++_iCurrent < _alData.size())
+		if (++_iCurrent < _alData.size())
 		{
-			_currentRow = (Object[])_alData.get(_iCurrent);
+			_currentRow = (Object[]) _alData.get(_iCurrent);
 			return true;
 		}
 		return false;
@@ -210,16 +273,21 @@ public class ResultSetDataSet implements IDataSet {
 		return _currentRow[columnIndex];
 	}
 
-	private ColumnDisplayDefinition[] createColumnDefinitions(ResultSetMetaData md,
-														int[] columnIndices)
-			throws SQLException
+	private ColumnDisplayDefinition[] createColumnDefinitions(
+		ResultSetMetaData md,
+		int[] columnIndices)
+		throws SQLException
 	{
 		// TODO?? ColumnDisplayDefinition should also have the Type (String, Date, Double,Integer,Boolean)
-		ColumnDisplayDefinition[] columnDefs = new ColumnDisplayDefinition[_columnCount];
-		for (int i = 0; i < _columnCount; ++i) {
+		ColumnDisplayDefinition[] columnDefs =
+			new ColumnDisplayDefinition[_columnCount];
+		for (int i = 0; i < _columnCount; ++i)
+		{
 			int idx = columnIndices != null ? columnIndices[i] : i + 1;
-			columnDefs[i] = new ColumnDisplayDefinition(
-							md.getColumnDisplaySize(idx), md.getColumnLabel(idx));
+			columnDefs[i] =
+				new ColumnDisplayDefinition(
+					md.getColumnDisplaySize(idx),
+					md.getColumnLabel(idx));
 		}
 		return columnDefs;
 	}
